assets/css/web_style.css
/* ... */
.service-item:hover .second-service-icon {
    background-image: url(../images/second-main-icon.png);
}

.service-item .third-service-icon {
    background-image: url(../images/third-white-icon.png);
}

.service-item:hover .third-service-icon {
    background-image: url(../images/third-main-icon.png);
}

.service-item .fourth-service-icon {
    background-image: url(../images/fourth-white-icon.png);
}

.service-item:hover .fourth-service-icon {
    background-image: url(../images/fourth-main-icon.png);
}


/* My Work */

section.my-work .section-heading {
    text-align: center;
    padding: 80px 45px 50px 45px;
}

.isotope-wrapper {
    position: relative;
    width: 100%;
    margin: auto;
}

.isotope-toolbar input[type="radio"] {
    display: none;
}

.isotope-toolbar span {
    text-transform: capitalize;
    display: inline-block;
    margin-right: 15px;
    padding-bottom: 3px;
    font-size: 15px;
    font-weight: 700;
    border-bottom: 2px solid transparent;
    transform: ease-in-out 0.5s;
    cursor: pointer;
}

.isotope-toolbar input[type="radio"]:checked + span {
    color: #a43f49;
    border-bottom: 2px solid #a43f49;
}

.isotope-box {
    position: relative;
    width: 100%;
}

.isotope-toolbar {
    text-align: center;
    margin: 10px;
}

.isotope-toolbar p {
    border-top: 1px solid #fff;
    padding-top: 15px;
}

.isotope-toolbar a {
    color: #fff;
}

.isotope-item {
    position: relative;
    width: 48%;
    margin: 1%;
    border-bottom: 2px solid rgba(250,250,250,0.1);
    padding-bottom: 30px;
    margin-bottom: 30px;
}

.isotope-item img {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 5px;
}

.lazyload {
    background: #f7f7f7;
}

.lazyloading {
    background: #f7f7f7 url(//afarkas.github.io/lazysizes/assets/imgs/loader.gif) no-repeat center;
    min-height: 60px;
}

figure.snip1321 {
  overflow: hidden;
  text-align: center;
  -webkit-perspective: 50em;
  perspective: 50em;
}
figure.snip1321 * {
  -webkit-box-sizing: padding-box;
  box-sizing: padding-box;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}
figure.snip1321 figcaption {
  top: 50%;
  left: 20px;
  right: 20px;
  position: absolute;
  opacity: 0;
  z-index: 1;
}
figure.snip1321 h4 {
    margin-top: 15px;
  margin-bottom: 5px;
  color: #232323;
}
figure.snip1321 span {
    font-size: 14px;
    font-style: italic;
    display: block;
    color: #7a7a7a;
}
figure.snip1321 i {
  position: relative!important;
  font-size: 18px;
  background-color: #a43f49;
  width: 40px;
  height: 40px;
  display: inline-block;
  text-align: center;
  line-height: 40px;
  border-radius: 5px;
  color: #fff;
}
figure.snip1321:after {
  background-color: #ffffff;
  position: absolute;
  content: "";
  display: block;
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 20px;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
  -webkit-transform: rotateX(-90deg);
  transform: rotateX(-90deg);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
}
figure.snip1321 a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
}
figure.snip1321:hover figcaption,
figure.snip1321.hover figcaption {
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}
figure.snip1321:hover:after,
figure.snip1321.hover:after {
  -webkit-transform: rotateX(0);
  transform: rotateX(0);
  opacity: 0.9;
}


/* Contact Me */

section.contact-me {
    border-bottom: none;
}

#contact input {
    background-color: rgba(250,250,250,0.1);
    border: 1px solid rgba(250,250,250,1);
    border-radius: 0px;
    margin-bottom: 30px;
    color: #fff;
    font-size: 14px;
    height: 40px;
    line-height: 40px;
    width: 100%;
    padding-left: 15px;
}

#contact input:focus {
    outline: none;
    box-shadow: none;
}

#contact textarea {
    background-color: rgba(250,250,250,0.1);
    border: 1px solid rgba(250,250,250,1);
    border-radius: 0px;
    margin-bottom: 30px;
    color: #fff;
    font-size: 14px;
    height: 180px;
    max-height: 220px;
    line-height: 40px;
    width: 100%;
    padding-left: 15px;
}

#contact textarea:focus {
    outline: none;
    box-shadow: none;
}

#contact {
    text-align: center;
}

@media screen and (max-width: 1680px) {
    .menu {
        left: 5%;
    }

    .section {
        color: #fff;
        width: 65%;
        right: 5%;
        left: 30%;
    }
}

@media screen and (max-width: 1680px) and (min-width: 846px) { 
    .menu .social-network ul li a {
        width: 36px;
        height: 36px;
        line-height: 36px;
    }

    .menu .social-network ul li {
        margin: 0;
    }

    .menu .image {
        margin-top: 60px;
    }
}

@media screen and (max-width: 1280px) {
    .menu {
        left: 0%;
    }

    .right-image-post h4,
    .left-image-post h4 {
        margin-top: 0px;
    }

    .right-image-post p,
    .left-image-post p {
        margin-top: 15px;
    }

    .right-image-post .white-button,
    .left-image-post .white-button {
        margin-top: 25px;
    }

}

.menu .container {
    padding-left: 0;
    padding-right: 0;
}

@media screen and (max-width: 1280px) and (min-width: 846px) {
    .menu {
        width: 25%;
    }
}

#menu-toggle,
#menu-close {
    display: none;
}  
/* ... */

